fix: set overflow-x to hidden for all container sections

--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -17,6 +17,7 @@ section.container {
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow-x: hidden;
 
   div.content {
     width: 100%;
